@@ -8,6 +8,8 @@ VERSION 2.9.90
    * Added a visual hint that context view applets can be resized in edit mode.
   CHANGES:
    * Replace defunct lyricwiki with lyrics.ovh as lyrics provider for now. (BR 455937)
+   * Show only relevant items in wikipedia applet right click menu (BR 323941), use
+     monobook skin for opened links and silently ignore non-wikipedia links.
   BUGFIXES:
    * Fix loading of some Flickr photos in the photos context view applet and show
      more relevant photos. (BR 317108)
